Bug 298658 - Selecting "Previously Used Session" with Guest causes login to fail
Summary: Selecting "Previously Used Session" with Guest causes login to fail
Status: RESOLVED FIXED
Alias: None
Product: lightdm
Classification: Plasma
Component: greeter (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-23 12:30 UTC by David Edmundson
Modified: 2012-04-28 23:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-04-23 12:30:39 UTC
When using the userbar theme if the guest user is selected the session defaults to "Previously Used Session". When trying to log in, it then fails.as it is unsure which DE to load.

On the userbar theme as we have the user it makes no sense to show the entry "Previously Used Session". It only makes sense in the context of the classic theme where user is not yet selected.

Suggest we make this a property on the SessionsModel to show/remove this entry.
Comment 1 David Edmundson 2012-04-28 23:59:07 UTC
Git commit 5b901f20f86166428803b5cd150b8b061c90cd76 by David Edmundson.
Committed on 27/04/2012 at 21:25.
Pushed by davidedmundson into branch 'master'.

Make sessions model class with a property to show/hide the entry "Show Last Used Session"

Updated the classic theme to use this. Userbar theme does not have this entry.

M  +1    -0    greeter/CMakeLists.txt
M  +2    -12   greeter/greeterwindow.cpp
A  +36   -0    greeter/sessionsmodel.cpp     [License: UNKNOWN]  *
A  +27   -0    greeter/sessionsmodel.h     [License: UNKNOWN]  *
M  +1    -0    themes/classic/main.qml

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/lightdm/5b901f20f86166428803b5cd150b8b061c90cd76