Make sessions model class with a property to show/hide the entry "Show Last Used Session"

Updated the classic theme to use this. Userbar theme does not have this entry.

BUG: 298658